--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=../../doc/html/yaml.html">
+    <meta http-equiv="refresh" content="0; URL=doc/html/index.html">
   </head>
 
   <body>
-    Automatic redirection failed, click this <a href="../../doc/html/yaml.html">link</a>
+    Automatic redirection failed, click this <a href="doc/html/index.html">link</a>
     <hr>
     <p>Copyright T. Zachary Laine 2017-2018</p>
     <p>
